--- a/.github/workflows/dev-cicd-workflow.yml
+++ b/.github/workflows/dev-cicd-workflow.yml
@@ -29,7 +29,7 @@ jobs:
         run: chmod +x gradlew
       # 테스트 수행
       - name: Test
-        run: ./gradlew clean test
+        run: ./gradlew test
       # 프로젝트 빌드
       - name: Build
         run: ./gradlew bootJar
