--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,7 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+logging:
+  level:
+    com.daon.backend.auth.infrastructure: debug
+    com.daon.backend.security: debug
