--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     username: sa
     password:
 
+  redis:
+    port: 6379
+    host: 127.0.0.1
+
 cors:
   allowed-origins:
     http://localhost
@@ -30,3 +34,4 @@ jwt:
     expiration: 5 # sec
   refresh-token:
     expiration: 10 #sec
+    reissue-condition: 3 #sec
