--- a/local/postgres/docker-compose.yml
+++ b/local/postgres/docker-compose.yml
@@ -9,5 +9,6 @@ services:
     volumes:
       - ./db/data:/var/lib/postgresql/data
     env_file: .env
+    restart: always
     networks:
       default:
