❇️[feat] sse 기능 추가 #196
- heartbeat 전송 추가
- 이벤트 타입 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,4 @@ logging:
   level:
     com.daon.backend.auth.infrastructure: debug
     com.daon.backend.security: debug
+    com.daon.backend.notification.infrastructure: debug
