--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -4,11 +4,19 @@ spring:
     url: jdbc:h2:mem:mem_db
     username: sa
     password:
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    defer-datasource-initialization: true
 
   redis:
     port: 6379
     host: 127.0.0.1
 
+  sql:
+    init:
+      mode: always
+      data-locations: classpath:import.sql
 cors:
   allowed-origins:
     http://localhost
