--- a/.github/workflows/dev-cicd-workflow.yml
+++ b/.github/workflows/dev-cicd-workflow.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Grant execute permisstion for gradlew
         run: chmod +x gradlew
       # 테스트 수행
-      # - name: Test
-        # run: ./gradlew test
+      - name: Test
+        run: ./gradlew test
       # 프로젝트 빌드
       - name: Build
         run: ./gradlew bootJar
